--- a/index.html
+++ b/index.html
@@ -1183,14 +1183,12 @@
                   <span>🐸✨ FEELS GOOD MAN 🐸✨</span>
                   <br />
                   <br />
-                  Meet Pepe, the chill frog who became the king of memes.
-                  Created by Matt Furie, his relaxed, feel-good vibe turned
-                  into the legendary FEELS GOOD MAN mantra.
-                  <br />
-                  From internet meme to NFT superstar, Pepe's serene smile
-                  reminds us to take it easy and enjoy the ride.
-                  <br />
-                  Feeling down? Just remember: FEELS GOOD MAN.
+                  Rare Pepe Wallet Creator: ‘And With That, the Rare Pepe Directory Is Complete’
+                  <br> <br>
+                  On October 5, the NFT marketplace chainsaw.fun and Matt Furie’s Pegz NFT project introduced Furie’s
+                  FEELSGOODMAN Rare Pepe card. On Twitter, Chainsaw wrote: “Chainsaw NFT, Pegz DAO, and Matt Furie are
+                  ecstatic to announce the auction of the Matt Furie FEELSGOODMAN Rare Pepe. A piece of blockchain
+                  history, originally minted in 2016.”
                 </p>
               </div>
             </div>
