--- a/index.html
+++ b/index.html
@@ -725,8 +725,8 @@
                   display: inline-block;
                 }
               </style>
-              <img fetchpriority="high" decoding="async" width="800" height="800" src="logo1.png"
-                class="attachment-large size-large wp-image-10" alt="" srcset="logo1.png"
+              <img fetchpriority="high" decoding="async" width="800" height="800" src="./sign.jpg"
+                class="attachment-large size-large wp-image-10" alt="" 
                 sizes="(max-width: 800px) 100vw, 800px" />
             </div>
           </div>
@@ -1183,12 +1183,12 @@
                   <span>🐸✨ FEELS GOOD MAN 🐸✨</span>
                   <br />
                   <br />
-                  Rare Pepe Wallet Creator: ‘And With That, the Rare Pepe Directory Is Complete’
+                  Matt Furie: ‘And With That, the Rare Pepe Directory Is Complete’
                   <br> <br>
-                  On October 5, the NFT marketplace chainsaw.fun and Matt Furie’s Pegz NFT project introduced Furie’s
-                  FEELSGOODMAN Rare Pepe card. On Twitter, Chainsaw wrote: “Chainsaw NFT, Pegz DAO, and Matt Furie are
-                  ecstatic to announce the auction of the Matt Furie FEELSGOODMAN Rare Pepe. A piece of blockchain
-                  history, originally minted in 2016.”
+                  On October 5, 2016, the NFT marketplace chainsaw.fun and Matt Furie’s Pegz NFT project introduced
+                  Furie’s FEELSGOODMAN Rare Pepe card. On Twitter, Chainsaw wrote: “Chainsaw NFT, Pegz DAO, and Matt
+                  Furie are ecstatic to announce the auction of the Matt Furie FEELSGOODMAN Rare Pepe. A piece of
+                  blockchain history, originally minted in 2016.”
                 </p>
               </div>
             </div>
@@ -1515,9 +1515,10 @@
                   data-widget_type="button.default">
                   <div class="elementor-widget-container">
                     <div class="elementor-button-wrapper">
-                      <a class="elementor-button elementor-button-link elementor-size-sm" href="buylink">
+                      <a class="elementor-button elementor-button-link elementor-size-sm"
+                        href="https://news.bitcoin.com/matt-furie-adds-to-2016-nft-card-collection-rare-pepe-directory-is-complete-says-nft-wallet-creator/">
                         <span class="elementor-button-content-wrapper">
-                          <span class="elementor-button-text">Buy $FGOOD</span>
+                          <span class="elementor-button-text">$FGOOD SOURCE</span>
                         </span>
                       </a>
                     </div>
