--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                     }
                   </style>
                   <h1 class="elementor-heading-title elementor-size-default">
-                    $FGOOD
+                    $FEELSGM
                   </h1>
                 </div>
               </div>
@@ -754,7 +754,7 @@
                     <div class="elementor-button-wrapper">
                       <a class="elementor-button elementor-button-link elementor-size-sm" href="buylink">
                         <span class="elementor-button-content-wrapper">
-                          <span class="elementor-button-text">Buy $FGOOD</span>
+                          <span class="elementor-button-text">Buy $FEELSGM</span>
                         </span>
                       </a>
                     </div>
@@ -1137,23 +1137,23 @@
       <div class="elementor-element elementor-element-5b7e9774 elementor-widget elementor-widget-html"
         data-id="5b7e9774" data-element_type="widget" data-widget_type="html.default">
         <div class="elementor-widget-container">
-          <marquee scrollamount="20" class="white">$FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS
-            GOOD MAN- $FGOOD - - $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD
-            MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD -
-            FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN-
-            $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS
-            GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD
-            - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - - $FGOOD -
-            FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN-
-            $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS
-            GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD
-            - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD
-            MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD -
-            FEELS GOOD MAN- $FGOOD - - $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS
-            GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD
-            - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD
-            MAN- $FGOOD - FEELS GOOD MAN- $FGOOD - FEELS GOOD MAN- $FGOOD -
-            FEELS GOOD MAN- $FGOOD</marquee>
+          <marquee scrollamount="20" class="white">$FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS
+            GOOD MAN- $FEELSGM - - $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD
+            MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM -
+            FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN-
+            $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS
+            GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM
+            - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - - $FEELSGM -
+            FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN-
+            $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS
+            GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM
+            - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD
+            MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM -
+            FEELS GOOD MAN- $FEELSGM - - $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS
+            GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM
+            - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD
+            MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM - FEELS GOOD MAN- $FEELSGM -
+            FEELS GOOD MAN- $FEELSGM</marquee>
         </div>
       </div>
     </div>
@@ -1170,7 +1170,7 @@
               data-widget_type="heading.default">
               <div class="elementor-widget-container">
                 <h2 class="elementor-heading-title elementor-size-default">
-                  About $FGOOD
+                  About $FEELSGM
                 </h2>
               </div>
             </div>
@@ -1408,7 +1408,7 @@
                 data-id="44bff22" data-element_type="widget" data-widget_type="heading.default">
                 <div class="elementor-widget-container">
                   <p class="elementor-heading-title elementor-size-default">
-                    have ETH in your wallet to switch to $FGOOD. If you don’t
+                    have ETH in your wallet to switch to $FEELSGM. If you don’t
                     have any ETH, you can buy directly on metamask, transfer
                     from another wallet, or buy on another exchange and send
                     it to your wallet.
@@ -1455,7 +1455,7 @@
                   <p class="elementor-heading-title elementor-size-default">
                     connect to Uniswap. Go to app.uniswap.org in google chrome
                     or on the browser inside your Metamask app. Connect your
-                    wallet. Paste the $FGOOD token address into Uniswap,
+                    wallet. Paste the $FEELSGM token address into Uniswap,
                     select , and confirm. When Metamask prompts you for a
                     wallet signature, sign.
                   </p>
@@ -1474,7 +1474,7 @@
                 <div class="elementor-widget-container">
                   <center><img src="logo.png" style="width: 150px" /></center>
                   <h2 class="elementor-heading-title elementor-size-default">
-                    Switch ETH for $FGOOD
+                    Switch ETH for $FEELSGM
                   </h2>
                 </div>
               </div>
@@ -1482,7 +1482,7 @@
                 data-id="749f5fd" data-element_type="widget" data-widget_type="heading.default">
                 <div class="elementor-widget-container">
                   <p class="elementor-heading-title elementor-size-default">
-                    switch ETH for $FGOOD. We have ZERO taxes so you don’t
+                    switch ETH for $FEELSGM. We have ZERO taxes so you don’t
                     need to worry about buying with a specific slippage,
                     although you may need to use slippage during times of
                     market volatility.
@@ -1518,7 +1518,7 @@
                       <a class="elementor-button elementor-button-link elementor-size-sm"
                         href="https://news.bitcoin.com/matt-furie-adds-to-2016-nft-card-collection-rare-pepe-directory-is-complete-says-nft-wallet-creator/">
                         <span class="elementor-button-content-wrapper">
-                          <span class="elementor-button-text">$FGOOD SOURCE</span>
+                          <span class="elementor-button-text">$FEELSGM SOURCE</span>
                         </span>
                       </a>
                     </div>
@@ -1656,7 +1656,7 @@
             <div class="elementor-widget-container">
               <p class="elementor-heading-title elementor-size-default">
                 Name: FEELS GOOD MAN<br />
-                Symbol: $FGOOD <br />
+                Symbol: $FEELSGM <br />
                 Total Supply: 420,690,000,000<br />
 
                 Liquidity Burned<br />
@@ -1670,11 +1670,12 @@
           data-id="1dd8365" data-element_type="container" data-settings='{"animation":"zoomInUp"}'>
           <div class="elementor-element elementor-element-60eac16 elementor-widget elementor-widget-image"
             data-id="60eac16" data-element_type="widget"
-            data-settings='{"motion_fx_motion_fx_scrolling":"yes","motion_fx_rotateZ_effect":"yes","motion_fx_rotateZ_direction":"negative","motion_fx_rotateZ_speed":{"unit":"px","size":1.9,"sizes":[]},"motion_fx_rotateZ_affectedRange":{"unit":"%","size":"","sizes":{"start":0,"end":100}},"motion_fx_devices":["desktop","tablet","mobile"]}'
+            
             data-widget_type="image.default">
+            <!-- data-settings='{"motion_fx_motion_fx_scrolling":"yes","motion_fx_rotateZ_effect":"yes","motion_fx_rotateZ_direction":"negative","motion_fx_rotateZ_speed":{"unit":"px","size":1.9,"sizes":[]},"motion_fx_rotateZ_affectedRange":{"unit":"%","size":"","sizes":{"start":0,"end":100}},"motion_fx_devices":["desktop","tablet","mobile"]}' -->
             <div class="elementor-widget-container">
-              <img loading="lazy" decoding="async" width="200" height="200" src="logo.png"
-                class="attachment-large size-large wp-image-888" alt="" srcset="logo.png"
+              <img loading="lazy" decoding="async" width="200" height="200" style="border-radius: 12px;" src="./flgd.jpg"
+                class="attachment-large size-large wp-image-888" alt="" 
                 sizes="(max-width: 1000px) 100vw, 500px" />
             </div>
           </div>
