--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
                   data-widget_type="button.default">
                   <div class="elementor-widget-container">
                     <div class="elementor-button-wrapper">
-                      <a class="elementor-button elementor-button-link elementor-size-sm" href="buylink">
+                      <a class="elementor-button elementor-button-link elementor-size-sm" href="https://app.uniswap.org/explore/tokens/ethereum/0x600d6777805f45e960c84726f721757a0bfd3125">
                         <span class="elementor-button-content-wrapper">
                           <span class="elementor-button-text">Buy $FEELSGM</span>
                         </span>
@@ -1076,7 +1076,7 @@
                     <div class="elementor-social-icons-wrapper elementor-grid">
                       <span class="elementor-grid-item">
                         <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-0d499ff"
-                          href="ttlink" target="_blank">
+                          href="https://x.com/feelsgmcoin" target="_blank">
                           <span class="elementor-screen-only">Twitter</span>
                           <svg class="e-font-icon-svg e-fab-twitter" viewBox="0 0 512 512"
                             xmlns="http://www.w3.org/2000/svg">
@@ -1098,7 +1098,7 @@
                     <div class="elementor-social-icons-wrapper elementor-grid">
                       <span class="elementor-grid-item">
                         <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-0d499ff"
-                          href="tglink" target="_blank">
+                          href="https://t.me/feelsgmcoin" target="_blank">
                           <span class="elementor-screen-only">Telegram-plane</span>
                           <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512"
                             xmlns="http://www.w3.org/2000/svg">
@@ -1209,7 +1209,7 @@
                       <div class="elementor-element elementor-element-242514ab elementor-widget elementor-widget-image"
                         data-id="242514ab" data-element_type="widget" data-widget_type="image.default">
                         <div class="elementor-widget-container">
-                          <a href="https://dexscreener.com/ethereum/0x000000000000000000000000" target="_blank">
+                          <a href="https://dexscreener.com/ethereum/0x600D6777805f45E960c84726F721757a0bFD3125" target="_blank">
                             <img decoding="async" width="800" height="206" src="dexscreen.png"
                               class="attachment-large size-large wp-image-13" alt="" srcset="dexscreen.png"
                               sizes="(max-width: 800px) 100vw, 800px" />
@@ -1224,7 +1224,7 @@
                       <div class="elementor-element elementor-element-24135cdd elementor-widget elementor-widget-image"
                         data-id="24135cdd" data-element_type="widget" data-widget_type="image.default">
                         <div class="elementor-widget-container">
-                          <a href="buylink" target="_blank">
+                          <a href="https://app.uniswap.org/explore/tokens/ethereum/0x600d6777805f45e960c84726f721757a0bfd3125" target="_blank">
                             <img loading="lazy" decoding="async" width="800" height="188" src="unii.png"
                               class="attachment-large size-large wp-image-14" alt="" srcset="unii.png" /></a>
                         </div>
@@ -1237,7 +1237,7 @@
                       <div class="elementor-element elementor-element-34b56334 elementor-widget elementor-widget-image"
                         data-id="34b56334" data-element_type="widget" data-widget_type="image.default">
                         <div class="elementor-widget-container">
-                          <a href="chartlink">
+                          <a href="https://www.dextools.io/app/en/ether/pair-explorer/0xcc0e506f66224325d25224500911a391d0347859?t=1719686933465">
                             <img loading="lazy" decoding="async" width="800" height="308" src="dextools.png"
                               class="attachment-large size-large wp-image-15" alt="" srcset="dextools.png"
                               sizes="(max-width: 800px) 100vw, 800px" />
@@ -1252,7 +1252,7 @@
                       <div class="elementor-element elementor-element-1695b1a elementor-widget elementor-widget-image"
                         data-id="1695b1a" data-element_type="widget" data-widget_type="image.default">
                         <div class="elementor-widget-container">
-                          <a href="contractlink">
+                          <a href="https://etherscan.io/address/0x600d6777805f45e960c84726f721757a0bfd3125">
                             <img loading="lazy" decoding="async" width="632" height="126" src="etherrscan.png"
                               class="attachment-large size-large wp-image-16" alt="" />
                           </a>
@@ -1533,7 +1533,7 @@
                     <div class="elementor-social-icons-wrapper elementor-grid">
                       <span class="elementor-grid-item">
                         <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-0d499ff"
-                          href="ttlink" target="_blank">
+                          href="https://x.com/feelsgmcoin" target="_blank">
                           <span class="elementor-screen-only">Twitter</span>
                           <svg class="e-font-icon-svg e-fab-twitter" viewBox="0 0 512 512"
                             xmlns="http://www.w3.org/2000/svg">
@@ -1555,7 +1555,7 @@
                     <div class="elementor-social-icons-wrapper elementor-grid">
                       <span class="elementor-grid-item">
                         <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-0d499ff"
-                          href="tglink" target="_blank">
+                          href="https://t.me/feelsgmcoin" target="_blank">
                           <span class="elementor-screen-only">Telegram-plane</span>
                           <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512"
                             xmlns="http://www.w3.org/2000/svg">
@@ -1687,7 +1687,7 @@
             data-id="010b90b" data-element_type="widget" data-widget_type="heading.default">
             <div class="elementor-widget-container">
               <p class="elementor-heading-title elementor-size-default">
-                Contract Address: 0x000000000000000000000000
+                Contract Address: 0x600D6777805f45E960c84726F721757a0bFD3125
               </p>
             </div>
           </div>
@@ -1704,7 +1704,7 @@
 
       <div class="bottom">
         <div class="ftrlinks center" id="start">
-          <a href="tglink" target="_blank" rel="noopener noreferrer">
+          <a href="https://t.me/feelsgmcoin" target="_blank" rel="noopener noreferrer">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
               <path
                 d="M 44.376953 5.9863281 C 43.889905 6.0076957 43.415817 6.1432497 42.988281 6.3144531 C 42.565113 6.4845113 40.128883 7.5243408 36.53125 9.0625 C 32.933617 10.600659 28.256963 12.603668 23.621094 14.589844 C 14.349356 18.562196 5.2382813 22.470703 5.2382812 22.470703 L 5.3046875 22.445312 C 5.3046875 22.445312 4.7547875 22.629122 4.1972656 23.017578 C 3.9185047 23.211806 3.6186028 23.462555 3.3730469 23.828125 C 3.127491 24.193695 2.9479735 24.711788 3.015625 25.259766 C 3.2532479 27.184511 5.2480469 27.730469 5.2480469 27.730469 L 5.2558594 27.734375 L 14.158203 30.78125 C 14.385177 31.538434 16.858319 39.792923 17.402344 41.541016 C 17.702797 42.507484 17.984013 43.064995 18.277344 43.445312 C 18.424133 43.635633 18.577962 43.782915 18.748047 43.890625 C 18.815627 43.933415 18.8867 43.965525 18.957031 43.994141 C 18.958531 43.994806 18.959437 43.99348 18.960938 43.994141 C 18.969579 43.997952 18.977708 43.998295 18.986328 44.001953 L 18.962891 43.996094 C 18.979231 44.002694 18.995359 44.013801 19.011719 44.019531 C 19.043456 44.030655 19.062905 44.030268 19.103516 44.039062 C 20.123059 44.395042 20.966797 43.734375 20.966797 43.734375 L 21.001953 43.707031 L 26.470703 38.634766 L 35.345703 45.554688 L 35.457031 45.605469 C 37.010484 46.295216 38.415349 45.910403 39.193359 45.277344 C 39.97137 44.644284 40.277344 43.828125 40.277344 43.828125 L 40.310547 43.742188 L 46.832031 9.7519531 C 46.998903 8.9915162 47.022612 8.334202 46.865234 7.7402344 C 46.707857 7.1462668 46.325492 6.6299361 45.845703 6.34375 C 45.365914 6.0575639 44.864001 5.9649605 44.376953 5.9863281 z M 44.429688 8.0195312 C 44.627491 8.0103707 44.774102 8.032983 44.820312 8.0605469 C 44.866523 8.0881109 44.887272 8.0844829 44.931641 8.2519531 C 44.976011 8.419423 45.000036 8.7721605 44.878906 9.3242188 L 44.875 9.3359375 L 38.390625 43.128906 C 38.375275 43.162926 38.240151 43.475531 37.931641 43.726562 C 37.616914 43.982653 37.266874 44.182554 36.337891 43.792969 L 26.632812 36.224609 L 26.359375 36.009766 L 26.353516 36.015625 L 23.451172 33.837891 L 39.761719 14.648438 A 1.0001 1.0001 0 0 0 38.974609 13 A 1.0001 1.0001 0 0 0 38.445312 13.167969 L 14.84375 28.902344 L 5.9277344 25.849609 C 5.9277344 25.849609 5.0423771 25.356927 5 25.013672 C 4.99765 24.994652 4.9871961 25.011869 5.0332031 24.943359 C 5.0792101 24.874869 5.1948546 24.759225 5.3398438 24.658203 C 5.6298218 24.456159 5.9609375 24.333984 5.9609375 24.333984 L 5.9941406 24.322266 L 6.0273438 24.308594 C 6.0273438 24.308594 15.138894 20.399882 24.410156 16.427734 C 29.045787 14.44166 33.721617 12.440122 37.318359 10.902344 C 40.914175 9.3649615 43.512419 8.2583658 43.732422 8.1699219 C 43.982886 8.0696253 44.231884 8.0286918 44.429688 8.0195312 z M 33.613281 18.792969 L 21.244141 33.345703 L 21.238281 33.351562 A 1.0001 1.0001 0 0 0 21.183594 33.423828 A 1.0001 1.0001 0 0 0 21.128906 33.507812 A 1.0001 1.0001 0 0 0 20.998047 33.892578 A 1.0001 1.0001 0 0 0 20.998047 33.900391 L 19.386719 41.146484 C 19.35993 41.068197 19.341173 41.039555 19.3125 40.947266 L 19.3125 40.945312 C 18.800713 39.30085 16.467362 31.5161 16.144531 30.439453 L 33.613281 18.792969 z M 22.640625 35.730469 L 24.863281 37.398438 L 21.597656 40.425781 L 22.640625 35.730469 z">
@@ -1714,7 +1714,7 @@
         </div>
 
         <div class="ftrlinks center">
-          <a href="ttlink" target="_blank" rel="noopener noreferrer">
+          <a href="https://x.com/feelsgmcoin" target="_blank" rel="noopener noreferrer">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
               <path
                 d="M34.21875,5.46875C28.238281,5.46875,23.375,10.332031,23.375,16.3125C23.375,16.671875,23.464844,17.023438,23.5,17.375C16.105469,16.667969,9.566406,13.105469,5.125,7.65625C4.917969,7.394531,4.597656,7.253906,4.261719,7.277344C3.929688,7.300781,3.632813,7.492188,3.46875,7.78125C2.535156,9.386719,2,11.234375,2,13.21875C2,15.621094,2.859375,17.820313,4.1875,19.625C3.929688,19.511719,3.648438,19.449219,3.40625,19.3125C3.097656,19.148438,2.726563,19.15625,2.425781,19.335938C2.125,19.515625,1.941406,19.839844,1.9375,20.1875L1.9375,20.3125C1.9375,23.996094,3.84375,27.195313,6.65625,29.15625C6.625,29.152344,6.59375,29.164063,6.5625,29.15625C6.21875,29.097656,5.871094,29.21875,5.640625,29.480469C5.410156,29.742188,5.335938,30.105469,5.4375,30.4375C6.554688,33.910156,9.40625,36.5625,12.9375,37.53125C10.125,39.203125,6.863281,40.1875,3.34375,40.1875C2.582031,40.1875,1.851563,40.148438,1.125,40.0625C0.65625,40,0.207031,40.273438,0.0507813,40.71875C-0.109375,41.164063,0.0664063,41.660156,0.46875,41.90625C4.980469,44.800781,10.335938,46.5,16.09375,46.5C25.425781,46.5,32.746094,42.601563,37.65625,37.03125C42.566406,31.460938,45.125,24.226563,45.125,17.46875C45.125,17.183594,45.101563,16.90625,45.09375,16.625C46.925781,15.222656,48.5625,13.578125,49.84375,11.65625C50.097656,11.285156,50.070313,10.789063,49.777344,10.445313C49.488281,10.101563,49,9.996094,48.59375,10.1875C48.078125,10.417969,47.476563,10.441406,46.9375,10.625C47.648438,9.675781,48.257813,8.652344,48.625,7.5C48.75,7.105469,48.613281,6.671875,48.289063,6.414063C47.964844,6.160156,47.511719,6.128906,47.15625,6.34375C45.449219,7.355469,43.558594,8.066406,41.5625,8.5C39.625,6.6875,37.074219,5.46875,34.21875,5.46875ZM34.21875,7.46875C36.769531,7.46875,39.074219,8.558594,40.6875,10.28125C40.929688,10.53125,41.285156,10.636719,41.625,10.5625C42.929688,10.304688,44.167969,9.925781,45.375,9.4375C44.679688,10.375,43.820313,11.175781,42.8125,11.78125C42.355469,12.003906,42.140625,12.53125,42.308594,13.011719C42.472656,13.488281,42.972656,13.765625,43.46875,13.65625C44.46875,13.535156,45.359375,13.128906,46.3125,12.875C45.457031,13.800781,44.519531,14.636719,43.5,15.375C43.222656,15.578125,43.070313,15.90625,43.09375,16.25C43.109375,16.65625,43.125,17.058594,43.125,17.46875C43.125,23.71875,40.726563,30.503906,36.15625,35.6875C31.585938,40.871094,24.875,44.5,16.09375,44.5C12.105469,44.5,8.339844,43.617188,4.9375,42.0625C9.15625,41.738281,13.046875,40.246094,16.1875,37.78125C16.515625,37.519531,16.644531,37.082031,16.511719,36.683594C16.378906,36.285156,16.011719,36.011719,15.59375,36C12.296875,35.941406,9.535156,34.023438,8.0625,31.3125C8.117188,31.3125,8.164063,31.3125,8.21875,31.3125C9.207031,31.3125,10.183594,31.1875,11.09375,30.9375C11.53125,30.808594,11.832031,30.402344,11.816406,29.945313C11.800781,29.488281,11.476563,29.097656,11.03125,29C7.472656,28.28125,4.804688,25.382813,4.1875,21.78125C5.195313,22.128906,6.226563,22.402344,7.34375,22.4375C7.800781,22.464844,8.214844,22.179688,8.355469,21.746094C8.496094,21.3125,8.324219,20.835938,7.9375,20.59375C5.5625,19.003906,4,16.296875,4,13.21875C4,12.078125,4.296875,11.03125,4.6875,10.03125C9.6875,15.519531,16.6875,19.164063,24.59375,19.5625C24.90625,19.578125,25.210938,19.449219,25.414063,19.210938C25.617188,18.96875,25.695313,18.648438,25.625,18.34375C25.472656,17.695313,25.375,17.007813,25.375,16.3125C25.375,11.414063,29.320313,7.46875,34.21875,7.46875Z">
